<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="title">Calculate Me!</string>
    <string name="action_settings">Settings</string>
    <string name="defaultAnswerDisplay">0</string>
    <string name="clearString">CLEAR</string>
    <string name="sevenString">7</string>
    <string name="eightString">8</string>
    <string name="nineString">9</string>
    <string name="divideString">/</string>
    <string name="fourString">4</string>
    <string name="fiveString">5</string>
    <string name="sixString">6</string>
    <string name="stringMultiply">*</string>
    <string name="oneString">1</string>
    <string name="twoString">2</string>
    <string name="threeString">3</string>
    <string name="addString">+</string>
    <string name="decimalString">.</string>
    <string name="zeroString">0</string>
    <string name="equalString">=</string>
    <string name="subtractString">-</string>
</resources>
