<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.georgian.kelly.androidcalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answerDisplay"
        android:textSize="@dimen/answerDisplayHeight"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="false"
        android:textColor="#432a52"
        android:background="#e1e1e1"
        android:padding="@dimen/lrgButtonPadding"
        android:text="@string/defaultAnswerDisplay" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearString"
        android:id="@+id/buttonClear"
        android:layout_below="@+id/answerDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/answerDisplay"
        android:layout_alignEnd="@+id/answerDisplay"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@id/answerDisplay"
        android:layout_toEndOf="@id/answerDisplay"
        android:layout_toStartOf="@id/answerDisplay"
        android:background="#87619f"
        android:textColor="#ffffff"
        android:padding="@dimen/lrgButtonPadding" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sevenString"
        android:id="@+id/buttonSeven"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignStart="@id/answerDisplay"
        android:gravity="center"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_below="@+id/buttonClear"
        android:layout_toLeftOf="@+id/buttonEight" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eightString"
        android:id="@+id/buttonEight"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_below="@+id/buttonClear"
        android:layout_toLeftOf="@+id/buttonNine" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nineString"
        android:id="@+id/buttonNine"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_below="@+id/buttonClear"
        android:layout_toLeftOf="@+id/buttonDivide" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divideString"
        android:id="@+id/buttonDivide"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:background="#87619f"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:padding="@dimen/mediumButtonPadding"
        android:layout_alignEnd="@id/answerDisplay"
        android:layout_below="@+id/buttonClear" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourString"
        android:id="@+id/buttonFour"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_below="@+id/buttonSeven"
        android:layout_alignStart="@id/answerDisplay"
        android:layout_toLeftOf="@+id/buttonFive" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fiveString"
        android:id="@+id/buttonFive"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_below="@+id/buttonEight"
        android:layout_toLeftOf="@+id/buttonSix" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixString"
        android:id="@+id/buttonSix"
        android:layout_below="@+id/buttonNine"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_toLeftOf="@+id/buttonMultiply" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringMultiply"
        android:id="@+id/buttonMultiply"
        android:layout_below="@+id/buttonDivide"
        android:background="#87619f"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:padding="@dimen/mediumButtonPadding"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@id/answerDisplay" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneString"
        android:id="@+id/buttonOne"
        android:gravity="center"
        android:layout_below="@+id/buttonFour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_alignStart="@id/answerDisplay"
        android:layout_toLeftOf="@+id/buttonTwo" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twoString"
        android:id="@+id/buttonTwo"
        android:gravity="center"
        android:layout_below="@+id/buttonFive"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_toLeftOf="@+id/buttonThree" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threeString"
        android:id="@+id/buttonThree"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_below="@+id/buttonSix"
        android:layout_toLeftOf="@+id/buttonAdd" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addString"
        android:id="@+id/buttonAdd"
        android:layout_below="@+id/buttonMultiply"
        android:background="#87619f"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:padding="@dimen/mediumButtonPadding"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@id/answerDisplay" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimalString"
        android:id="@+id/buttonDec"
        android:layout_below="@+id/buttonOne"
        android:layout_alignParentLeft="true"
        android:textColor="#432a52"
        android:background="#959595"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_alignParentStart="false"
        android:layout_alignStart="@id/answerDisplay"
        android:layout_toLeftOf="@+id/buttonZero" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroString"
        android:id="@+id/buttonZero"
        android:layout_below="@+id/buttonTwo"
        android:background="#959595"
        android:textColor="#432a52"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_toLeftOf="@+id/buttonEquals" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equalString"
        android:id="@+id/buttonEquals"
        android:layout_below="@+id/buttonThree"
        android:textColor="#432a52"
        android:background="#959595"
        android:textStyle="bold"
        android:padding="@dimen/smallButtonPadding"
        android:layout_toLeftOf="@+id/buttonSubtract" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtractString"
        android:id="@+id/buttonSubtract"
        android:layout_below="@+id/buttonAdd"
        android:background="#87619f"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:padding="@dimen/mediumButtonPadding"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/answerDisplay"
        android:layout_alignParentRight="true" />

</RelativeLayout>
